--- a/Note/src/main/res/layout/app_bar_main.xml
+++ b/Note/src/main/res/layout/app_bar_main.xml
@@ -32,4 +32,13 @@
         android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/ic_dialog_email" />
 
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left|center"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@android:drawable/ic_dialog_dialer" />
+
 </android.support.design.widget.CoordinatorLayout>
